# dockerclaw

./: .env  .env.example  .gitignore  Dockerfile  README.md  cloudbuild.yaml  eslint.config.js  index.html  package-lock.json  package.json  vercel.json  vite.config.ts
.planning/: 05-INTERACTIVE-PLAN.md  API_KEY_SYSTEM_PLAN.md  PHASE1_IMPLEMENTATION.md  PRD.md  PROJECT.md  README.md  REFACTORING_PLAN.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  SUMMARY.md  config.json  nestor-memory.md  v1-fases-detall.md  v1-figma-plan.md  v1-minimal-PLAN.md  v1-multi-board-PLAN.md
.planning/architecture/: API_SPECIFICATION.md  DATA_MODEL.md  DEPLOYMENT_TOPOLOGY.md  REALTIME_DESIGN.md  SYSTEM_ARCHITECTURE.md
.planning/phases/: PHASE_0_FOUNDATION.md  PHASE_1_CORE_API.md  PHASE_2_CANVAS_UI.md  PHASE_3_REALTIME.md  PHASE_4_MEDIA.md  PHASE_5_AI.md
.planning/phases/02-frontend-foundation/: 02-01-PLAN.md  02-01-SUMMARY.md  02-CONTEXT.md
.planning/phases/03-actions-webhooks/: 03-01-PLAN.md  03-01-SUMMARY.md  03-CONTEXT.md
.planning/phases/04-rich-components/: 04-01-PLAN.md  04-01-SUMMARY.md  04-CONTEXT.md
.planning/phases/05-interactive/: 05-01-PLAN.md  05-CONTEXT.md
.planning/phases/06-realtime-history/: 06-01-PLAN.md  06-01-SUMMARY.md  06-01-VERIFICATION.md
.planning/phases/v1-figma/: 01-UI-BASE-PLAN.md
.planning/reference/: GLOSSARY.md  MIGRATION_STRATEGY.md  NFR.md  SDK_SPECIFICATION.md  SECURITY_MODEL.md
backend/: .env.example  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json
backend/prisma/: dev.db  schema.prisma
backend/src/: server.ts
backend/src/middleware/: auth.ts
bugs/: BUG-001-prisma-schema-mismatch.md  BUG-001.md  BUG-002.md  BUG-007.md  BUG-008.md  BUG_TEMPLATE.md  QA-TEST-REPORT-v2.0.md
dockerclaw-python-sdk/: .gitignore  LICENSE  README.md  examples.py  pyproject.toml
dockerclaw-python-sdk/dockerclaw/: __init__.py  client.py  exceptions.py  models.py  webhook_server.py
dockerclaw-python-sdk/tests/: __init__.py  test_client.py
frontend/: API.md  README.md  next.config.ts  package-lock.json  package.json  vercel.json
frontend/.planning/: nestor-memory.md
frontend/bugs/: BUG-003.md  BUG-004.md  BUG-005.md  INCONSISTENCY-002.md
frontend/migrations/: 001_add_card_coordinates.sql
frontend/src/: middleware.ts
frontend/src/app/: layout.tsx  (+2 more)
memory/: MEMORY.md
prisma/: schema.prisma
prisma/migrations/: README.md
public/api-docs/: index.html
sdk/python/: README.md  pyproject.toml
sdk/python/dockerclaw/: __init__.py  client.py  exceptions.py
sdk/python/tests/: __init__.py  test_client.py  test_exceptions.py
src/: App.tsx  index.css  index.ts
src/components/: AgentApiSettings.tsx  AuthButton.tsx  BlockWrapper.tsx  BoardMapSettings.tsx  BoardSelector.tsx  Canvas.tsx  CollaboratorCursors.tsx  ErrorBoundary.tsx  ShareDialog.tsx  SyncChoiceDialog.tsx  Toolbar.tsx  VirtualList.tsx
src/config/: api.ts
src/contexts/: AuthContext.tsx
src/hooks/: useAuth.ts  usePerformanceMonitor.ts  useThrottledCallback.ts
src/lib/: SpatialIndex.ts  auth.ts  blockDefaults.ts  blockRegistry.tsx  logger.ts  mappers.ts  offline.ts  retry.ts  supabase.ts  utils.ts  validation.ts  webhook.ts
src/middleware/: auth.ts
src/routes/: agents.ts  cards.ts  comments.ts  keys.ts  reactions.ts  templates.ts
src/services/: api.ts  boardSharing.ts  boardsApi.ts  collaboration.ts  db.ts  documentsApi.ts  sync.ts
src/types/: index.ts
supabase/.temp/: project-ref
supabase/functions/: README.md
supabase/migrations/: 001_create_tables.sql  002_board_collaborators.sql  003_agent_api_keys.sql  004_block_metadata.sql  005_board_owner_block_access.sql  20260220151705_add_comments_reactions.sql  20260221214000_add_core_tables.sql  20260221214500_add_fk_comments_reactions.sql  20260221220000_add_api_key_table.sql  202602220100_add_tags_and_rls.sql
(+145 files in other folders)
