[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dockerclaw"
version = "0.1.0"
description = "Python SDK for DockerClaw - AI-native canvas platform"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
authors = [
    {name = "DockerClaw Team"},
]
keywords = ["dockerclaw", "canvas", "ai", "sdk", "api"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "respx>=0.20.0",
]
webhook = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "ngrok>=0.12.0",
]

[project.urls]
Homepage = "https://github.com/dockerclaw/python-sdk"
Documentation = "https://docs.dockerclaw.dev"
Repository = "https://github.com/dockerclaw/python-sdk"
Issues = "https://github.com/dockerclaw/python-sdk/issues"

[tool.hatch.build.targets.wheel]
packages = ["dockerclaw"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.8"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"