[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dockerclaw"
version = "0.1.0"
description = "Python SDK for DockerClaw - A multi-board canvas system for agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "DockerClaw Team" },
]
keywords = ["dockerclaw", "canvas", "api", "sdk", "agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "respx>=0.20.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/dockerclaw/dockerclaw"
Documentation = "https://github.com/dockerclaw/dockerclaw#readme"
Repository = "https://github.com/dockerclaw/dockerclaw"
Issues = "https://github.com/dockerclaw/dockerclaw/issues"

[tool.hatch.build.targets.wheel]
packages = ["dockerclaw"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
